[gd_scene load_steps=3 format=2]

[ext_resource path="res://choicePopup.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="ChoicePopup" type="Panel"]
pause_mode = 2
margin_left = 8.0
margin_top = 25.0
margin_right = 505.0
margin_bottom = 145.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="Button" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 490.0
margin_bottom = 55.0
focus_neighbour_bottom = NodePath("../Option2")
focus_next = NodePath("../Option2")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="."]
margin_left = 8.0
margin_top = 62.0
margin_right = 489.0
margin_bottom = 108.0
focus_neighbour_top = NodePath("../Option1")
focus_previous = NodePath("../Option1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPortrait" type="TextureRect" parent="."]
margin_left = 501.0
margin_top = 1.0
margin_right = 621.0
margin_bottom = 116.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
